--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                     <a href="https://jomarie0.github.io/Calculator-App-prototype/" target="_blank" class="project_demo_btn">Demo</a>
                 </div>
                 <div class="project_info">
-                    <img src="planks.jpg" alt="" class="project_img">
+                    <img src="rock-paper-scissor-img.png" alt="" class="project_img">
                     <h1>Project 4</h1>
                     <p class="project_info_text">
                         Random Rock-Paper-Scissor Game
